--- a/wap/css/login.css
+++ b/wap/css/login.css
@@ -18,3 +18,16 @@ label{
     background: #cccccc;
     color: #333333;
 }
+.dlzc{
+    width: 100%;
+    height: 100px;
+    line-height: 100px;
+    text-align: center;
+    font-size: 30px;
+    color: #02b3dd;
+}
+.anniu{
+    width: 50px;
+    height: 30px;
+
+}
